--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1722,6 +1722,9 @@ footer span {
 		width: 100%;
 		margin:10px auto;
 	}
+	#articles {
+		padding-bottom:0px!important;
+	}
 
 /*.ad_space {display: none!important;}*/
 p img {max-width: 100%; height: auto;} 
