--- a/themes/style.css
+++ b/themes/style.css
@@ -81,7 +81,7 @@ div.jqcloud{overflow:hidden;position:relative}div.jqcloud span{padding:0}div.jqc
 
 /*** SIZING WITH REM ***/
 html { font-size: 62.5%; } 
-body { font-size: 14px; font-size: 1.4rem; } /* =14px */
+body { font-size: 14px; font-size: 1.4rem; color:#4c4e4d;} /* =14px */
 h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
 .first{ margin-left: 0; padding-left: 0;}
@@ -182,10 +182,11 @@ footer {
 	height:64px;
 	line-height:1.2em;
 	overflow:hidden;
-	margin-bottom:-32px;
+	margin-bottom:-30px;
 	font-family:'Roboto Condensed', sans-serif;
 	font-weight:400;
 	font-size:90%;
+	bottom: -2px;
 }
 
 footer a {
@@ -245,22 +246,28 @@ footer a {
 	height:480px;
 	overflow:hidden;
 	margin-bottom:-8px;
-	background: #000;
+	background:#000;
+	/*background: url(https://plumasatomicas.com/wp-content/uploads/2016/09/secretario-1.jpg;);*/
+	background-size: 100%;
+	background-repeat: no-repeat;
 }
 
 #shower span {text-transform: uppercase;}
 #shower span a {text-decoration: none; color: inherit;}
-.new span a {text-decoration: none; color: inherit; margin: 0px!important; text-transform: uppercase;}
+.new span a {text-decoration: none; color: inherit; margin: 0px!important; text-transform: initial;}
+
 
 #shower img {
 	position:absolute;
-    top:-9999px;
-    bottom:-9999px;
-    left:-9999px;
-    right:-9999px;
+    top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
     margin:auto;
     opacity: 0.5;
     filter: alpha(opacity=50);
+    width:100%;
+    height: auto;
 }
 
 .big, .news-container {
@@ -286,7 +293,7 @@ code {
 	padding:6px 6px 0px;
 	border-radius:4px;
 	font-size:20px;
-	margin:15px 5px 8px 0px;
+	margin:0px 0px 0px 0px;
 }
 
 .new span {
@@ -294,18 +301,9 @@ code {
 	text-shadow:1px 1px 3px #000;
 }
 
-#articles {
-	background:#3F3F3F;
-}
-
-#articles .wrapper {
-	text-align:center;
-}
-
-#articles a {
-	width:32%;
-	min-width:295px;
-}
+#articles {/*background:#3F3F3F;*/}
+#articles .wrapper {text-align:center;}
+#articles a {width:32%;min-width:295px;}
 
 .ficha-link {
 	height:auto;
@@ -316,6 +314,7 @@ code {
 	overflow:hidden;
 	box-shadow:0 3px 3px -3px #000;
 	vertical-align:top;
+	width: 32.85%;
 }
 
 .ficha-link div {
@@ -377,8 +376,8 @@ code {
 
 .side-link span {
 	margin-left:80px;
-	font-size:105%;
-	padding:10px 0px;
+	font-size:0.8em;
+	padding:5px 0px;
 }
 
 .post {
@@ -406,9 +405,14 @@ code {
 .ad_space{
 	display: block;
     margin: 1rem auto;
-    height:250px!important;
+    width:100%!important;
+    height:auto!important;
 }
 
+.ad_space div{width:100%!important;}
+.ad_space iframe{width:100%!important;}
+
+#sm_player{margin:0 auto;}
 .ad_space.top{
 	margin-top: 0!important;
 }
@@ -452,14 +456,13 @@ code {
 /* post */
 
 .contenido {
-	width:100%!important;
+	width:65%;
 	vertical-align:top;
-	text-align:center;
+	margin-top: 50px;
+	text-align:left;
 }
 
 .contenido a {text-decoration: underline;}
-.contenido h3{width:100%;}
-
 
 .sidebar {
 	background:#EEEEEE;
@@ -480,7 +483,8 @@ code {
 	margin:10px 0px;
 	font-size:250%;
 	width:100%;
-	max-width:650px;
+	max-width:100%;
+	line-height: 50px;
 }
 .contenido strong,
 .contenido em{display: inline;}
@@ -566,16 +570,16 @@ code {
 }
 
 .contenido blockquote p{
-	color:#DE5141;
-	width:84%;
-	max-width:650px;
-	margin-left:0px;
-	text-align:left;
-	font-size:115%;
-	letter-spacing:0.018em;
-	font-style:italic;
-	margin:32px 0px 32px 0px;
-	text-align: left!important;
+	color: #DE5141;
+    width: 70%;
+    max-width: 650px;
+    margin-left: 0px;
+    text-align: left;
+    font-size: 80%;
+    letter-spacing: 0.018em;
+    font-style: italic;
+    margin: 10px 0px 32px 50px;
+    text-align: left!important;
 }
 
 .contenido blockquote.quote:before {
@@ -603,11 +607,7 @@ code {
 .contenido blockquote.quote p {color:#3f3f3f; text-align: left!important; font-size: 90%; font-style: normal;}
 
 /*** WHAT THE FACT ***/
-.tag_cloud{
-	-moz-column-count:3;
-	-webkit-column-count:3;
-	column-count:3;
-}
+.tag_cloud{-webkit-column-count:3;-moz-column-count:3;column-count:3;}
 .tag_cloud code {opacity: 1;margin-top:5px;}
 
 .divider{width: 100%; clear: both; display: block; margin: 1rem auto 2.5rem auto; border: 1px solid #adadad;}
@@ -618,6 +618,7 @@ code {
 .wadafact .logo_wada {width: 100%; margin-bottom: 20px;}
 .wadafact .logo_wada img{float: left;}
 .wadafact .logo_wada h3{float: left; font-size: 26px; margin-top: 20px; font-weight: normal; text-transform: uppercase; color:#3f3f3f;}
+.intro { text-align: left !important; font-size: 25px; color: rgba(0,0,0,.5); } 
 
 .titulo_post_opinologo {font-size: 65%; margin-left: 330px!important;}
 
@@ -641,6 +642,8 @@ code {
 .mini-wrapper.full_two .post:nth-of-type(2){margin-right: 0!important;}
 
 #ensayo-wadafact a.mini:last-of-type {margin-bottom: 0px!important;}
+#ensayo-wadafact p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
+p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 
 .whatthefact blockquote {
 	color:#3F3F3F;
@@ -681,6 +684,8 @@ code {
     font-weight: bolder;
     color: #d43b33;
 }
+
+
 
 .quote_opinologo .btn_verdadero,
 .quote_opinologo .btn_verdades-descontextualizadas,
@@ -726,7 +731,6 @@ code {
 	vertical-align:bottom;
 	text-align:center;
 	margin:30px 0px 20px;
-	width:100%;
 }
 
 .postura_link {
@@ -1470,13 +1474,6 @@ ol li a {
 	color:#F7DEA0;
 }
 
-
-
-
-
-
-
-
 @media (min-width:1000px) {
 
 .wrapper {
@@ -1487,7 +1484,7 @@ ol li a {
 	width:86%;
 	max-width:1100px;
 	min-width:950px;
-	text-align:left;
+	text-align:center;
 }
 
 #articles a:nth-of-type(3n+2) {
@@ -1708,20 +1705,29 @@ footer span {
 #news-out {
 	display:none;
 }
-
-#resp-main {
-	display:none;
-}
-
-.searchbar {
-	left:1px;
-}
+#resp-main {display:none;}
+.searchbar {left:1px;}
 
 }
 
 @media (max-width:684px) {
+	.ficha-link {
+		height:auto;
+		background:#FFF;
+		border:1px solid #cbcaca;
+		border-radius:5px;
+		text-align:left;
+		overflow:hidden;
+		box-shadow:0 3px 3px -3px #000;
+		vertical-align:top;
+		width: 100%;
+		margin:10px auto;
+	}
+	#articles {
+		padding-bottom:0px!important;
+	}
 
-.ad_space {display: none!important;}
+/*.ad_space {display: none!important;}*/
 p img {max-width: 100%; height: auto;} 
 
 .wrapper {
@@ -1909,28 +1915,13 @@ header {
 	width:100%;
 	max-width:1000px;
 }
+.sidebar {display:none;}
+#dissappear {display:none;}
+.contenido h1 {font-size:195%;}
+.contenido h2 {font-size:140%;}
+.searchbar {right:1px;}
 
-.sidebar {
-	display:none;
-}
-
-#dissappear {
-	display:none;
-}
-
-.contenido h1 {
-	font-size:195%;
-}
-
-.contenido h2 {
-	font-size:140%;
-}
-
-.searchbar {
-	right:1px;
-}
-
-/*** WADAFACT MÓVIL ***/ 
+/*** WADAFACT MÓVIL ** 
 
 .opinologo_columnista {width: 100%!important; float:none!important; min-height: 220px!important;}
 .opinologo_columnista .bio_columnista {display: none!important;}
@@ -2052,32 +2043,37 @@ p strong {color: #606060;}
 
 #cardss {font-size:20px!important;}
 
-@media (max-width:999px) {
-	.list {display:none;}
-	#ficha-icon {display:block;}
-}
-
 @media (min-width:1000px) {
 	.list {display:block;}
 	#ficha-icon {display:none;}
 }
 
+@media (max-width:999px) {
+	.list {display:none;}
+	#ficha-icon {display:block;}
+}
+
+
 /* OPINOLOGOS */
 
-@media (max-width: 684px) {
+
+@media (min-width: 685px) {
 	.who, .postura_link {width:100%;}
 }
 
-@media (min-width: 685px) {
-	.who, .postura_link {width:47%;}
+@media (max-width: 684px) {
+	.who, .postura_link {width:100%;}
+
 }
 
 .opinologo h1 {text-align:center;}
-
+/*.opinologo { width: 100%;}*/
 
 .list h1 a {color:inherit;}
 
 .pointer {-webkit-animation:grow 2s ease-in-out 0s;-moz-animation:grow 2s ease-in-out 0s;animation:grow 2s ease-in-out 0s;}
+
+.charts{ text-align: center;}
 
 @-webkit-keyframes grow {
     from {-webkit-transform:scale(0);}
@@ -2115,3 +2111,4 @@ p strong {color: #606060;}
 .fixeddd {position:fixed!important;width:100%;}
 
 .list h1 a {color:inherit;}
+
