--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -81,7 +81,7 @@ div.jqcloud{overflow:hidden;position:relative}div.jqcloud span{padding:0}div.jqc
 
 /*** SIZING WITH REM ***/
 html { font-size: 62.5%; } 
-body { font-size: 14px; font-size: 1.4rem; } /* =14px */
+body { font-size: 14px; font-size: 1.4rem; color:#4c4e4d;} /* =14px */
 h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
 
 .first{ margin-left: 0; padding-left: 0;}
@@ -182,10 +182,11 @@ footer {
 	height:64px;
 	line-height:1.2em;
 	overflow:hidden;
-	margin-bottom:-32px;
+	margin-bottom:-30px;
 	font-family:'Roboto Condensed', sans-serif;
 	font-weight:400;
 	font-size:90%;
+	bottom: -2px;
 }
 
 footer a {
@@ -245,22 +246,27 @@ footer a {
 	height:480px;
 	overflow:hidden;
 	margin-bottom:-8px;
-	background: #000;
+	background: url(https://plumasatomicas.com/wp-content/uploads/2016/09/secretario-1.jpg;);
+	background-size: 100%;
+	background-repeat: no-repeat;
 }
 
 #shower span {text-transform: uppercase;}
 #shower span a {text-decoration: none; color: inherit;}
-.new span a {text-decoration: none; color: inherit; margin: 0px!important; text-transform: uppercase;}
+.new span a {text-decoration: none; color: inherit; margin: 0px!important; text-transform: initial;}
+
 
 #shower img {
 	position:absolute;
-    top:-9999px;
-    bottom:-9999px;
-    left:-9999px;
-    right:-9999px;
+    top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
     margin:auto;
     opacity: 0.5;
     filter: alpha(opacity=50);
+    width:100%;
+    height: auto;
 }
 
 .big, .news-container {
@@ -286,7 +292,7 @@ code {
 	padding:6px 6px 0px;
 	border-radius:4px;
 	font-size:20px;
-	margin:15px 5px 8px 0px;
+	margin:0px 0px 0px 0px;
 }
 
 .new span {
@@ -295,7 +301,7 @@ code {
 }
 
 #articles {
-	background:none;
+	/*background:#3F3F3F;*/
 }
 
 #articles .wrapper {
@@ -316,7 +322,7 @@ code {
 	overflow:hidden;
 	box-shadow:0 3px 3px -3px #000;
 	vertical-align:top;
-	width:33%;
+	width: 33%;
 }
 
 .ficha-link div {
@@ -378,8 +384,8 @@ code {
 
 .side-link span {
 	margin-left:80px;
-	font-size:105%;
-	padding:10px 0px;
+	font-size:0.8em;
+	padding:5px 0px;
 }
 
 .post {
@@ -407,7 +413,6 @@ code {
 .ad_space{
 	display: block;
     margin: 1rem auto;
-    height:250px!important;
 }
 
 .ad_space.top{
@@ -453,14 +458,13 @@ code {
 /* post */
 
 .contenido {
-	width:100%!important;
+	width:65%;
 	vertical-align:top;
-	text-align:center;
+	margin-top: 50px;
+	text-align:left;
 }
 
 .contenido a {text-decoration: underline;}
-.contenido h3{width:100%;}
-
 
 .sidebar {
 	background:#EEEEEE;
@@ -481,7 +485,8 @@ code {
 	margin:10px 0px;
 	font-size:250%;
 	width:100%;
-	max-width:650px;
+	max-width:100%;
+	line-height: 50px;
 }
 .contenido strong,
 .contenido em{display: inline;}
@@ -567,16 +572,16 @@ code {
 }
 
 .contenido blockquote p{
-	color:#DE5141;
-	width:84%;
-	max-width:650px;
-	margin-left:0px;
-	text-align:left;
-	font-size:115%;
-	letter-spacing:0.018em;
-	font-style:italic;
-	margin:32px 0px 32px 0px;
-	text-align: left!important;
+	color: #DE5141;
+    width: 70%;
+    max-width: 650px;
+    margin-left: 0px;
+    text-align: left;
+    font-size: 80%;
+    letter-spacing: 0.018em;
+    font-style: italic;
+    margin: 10px 0px 32px 50px;
+    text-align: left!important;
 }
 
 .contenido blockquote.quote:before {
@@ -604,12 +609,8 @@ code {
 .contenido blockquote.quote p {color:#3f3f3f; text-align: left!important; font-size: 90%; font-style: normal;}
 
 /*** WHAT THE FACT ***/
-.tag_cloud{
-	-moz-column-count:3;
-	-webkit-column-count:3;
-	column-count:3;
-}
-.tag_cloud code {opacity: 1;margin-top:5px;}
+
+.tag_cloud code {opacity: 1}
 
 .divider{width: 100%; clear: both; display: block; margin: 1rem auto 2.5rem auto; border: 1px solid #adadad;}
 .wadafact { width: 100%; margin: 0 4%;}
@@ -619,6 +620,7 @@ code {
 .wadafact .logo_wada {width: 100%; margin-bottom: 20px;}
 .wadafact .logo_wada img{float: left;}
 .wadafact .logo_wada h3{float: left; font-size: 26px; margin-top: 20px; font-weight: normal; text-transform: uppercase; color:#3f3f3f;}
+.intro { text-align: left !important; font-size: 25px; color: rgba(0,0,0,.5); } 
 
 .titulo_post_opinologo {font-size: 65%; margin-left: 330px!important;}
 
@@ -642,6 +644,8 @@ code {
 .mini-wrapper.full_two .post:nth-of-type(2){margin-right: 0!important;}
 
 #ensayo-wadafact a.mini:last-of-type {margin-bottom: 0px!important;}
+#ensayo-wadafact p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
+p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 
 .whatthefact blockquote {
 	color:#3F3F3F;
@@ -682,6 +686,8 @@ code {
     font-weight: bolder;
     color: #d43b33;
 }
+
+
 
 .quote_opinologo .btn_verdadero,
 .quote_opinologo .btn_verdades-descontextualizadas,
@@ -727,7 +733,6 @@ code {
 	vertical-align:bottom;
 	text-align:center;
 	margin:30px 0px 20px;
-	width:100%;
 }
 
 .postura_link {
@@ -1471,13 +1476,6 @@ ol li a {
 	color:#F7DEA0;
 }
 
-
-
-
-
-
-
-
 @media (min-width:1000px) {
 
 .wrapper {
@@ -1488,7 +1486,7 @@ ol li a {
 	width:86%;
 	max-width:1100px;
 	min-width:950px;
-	text-align:left;
+	text-align:center;
 }
 
 #articles a:nth-of-type(3n+2) {
@@ -2070,15 +2068,17 @@ p strong {color: #606060;}
 }
 
 @media (min-width: 685px) {
-	.who, .postura_link {width:47%;}
+	.who, .postura_link {width:100%;}
 }
 
 .opinologo h1 {text-align:center;}
-
+/*.opinologo { width: 100%;}*/
 
 .list h1 a {color:inherit;}
 
 .pointer {-webkit-animation:grow 2s ease-in-out 0s;-moz-animation:grow 2s ease-in-out 0s;animation:grow 2s ease-in-out 0s;}
+
+.charts{ text-align: center;}
 
 @-webkit-keyframes grow {
     from {-webkit-transform:scale(0);}
