--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -413,6 +413,7 @@ code {
 .ad_space{
 	display: block;
     margin: 1rem auto;
+    height:250px!important;
 }
 
 .ad_space.top{
@@ -609,7 +610,11 @@ code {
 .contenido blockquote.quote p {color:#3f3f3f; text-align: left!important; font-size: 90%; font-style: normal;}
 
 /*** WHAT THE FACT ***/
-
+.tag_cloud{
+	-moz-column-count:3;
+	-webkit-column-count:3;
+	column-count:3;
+}
 .tag_cloud code {opacity: 1}
 
 .divider{width: 100%; clear: both; display: block; margin: 1rem auto 2.5rem auto; border: 1px solid #adadad;}
@@ -795,6 +800,7 @@ p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 	font-size: 84%;
     line-height: 2.2rem;
 	margin-bottom:3px;
+	text-align: left;
 }
 
 .postura div {
