--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -246,7 +246,8 @@ footer a {
 	height:480px;
 	overflow:hidden;
 	margin-bottom:-8px;
-	background: url(https://plumasatomicas.com/wp-content/uploads/2016/09/secretario-1.jpg;);
+	/*background: url(https://plumasatomicas.com/wp-content/uploads/2016/09/secretario-1.jpg;);*/
+	background-color: #000;
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
@@ -541,7 +542,7 @@ code {
 	color:#888;
 	line-height:1.5em;
 	font-size:95%;
-	text-align: left!important;
+	text-align: left;
 }
 
 .contenido .post.mini{vertical-align: top;}
@@ -1484,6 +1485,8 @@ ol li a {
 
 @media (min-width:1000px) {
 
+	
+
 .wrapper {
 	width:100%;
 }
@@ -1566,6 +1569,7 @@ ol li a {
 }
 
 @media (max-width:999px) and (min-width:685px) {
+	.contenido p img{margin-left:16%!important;}
 
 .wrapper {
 	width:90%;
