--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -646,7 +646,7 @@ code {
 .mini-wrapper.full_two .post:nth-of-type(3){margin-right: 1.5rem!important;}
 .mini-wrapper.full_two .post:nth-of-type(2){margin-right: 0!important;}
 
-#ensayo-wadafact a.mini:last-of-type {margin-bottom: 0px!important;}
+#ensayo-wadafact a.mini:last-of-type {margin-bottom: 0px!important;margin-right: 0px!important;}
 #ensayo-wadafact p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 
