--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1454,7 +1454,7 @@ ol li a {
 .menu2 a {
 	font-family:'Roboto Condensed', sans-serif;
 	color:#FFF;
-	margin:50px;
+	margin:35px;
 	text-shadow:0px 0px 3px 3px #000;
 	opacity:0;
 	text-transform:uppercase;
@@ -1465,6 +1465,7 @@ ol li a {
 	left:0px;
 	border-top:2px solid #757575;
 	margin-top:50px;
+	padding-top:10px;
 }
 
 .bottom1 a {
@@ -2129,3 +2130,22 @@ p strong {color: #606060;}
 .fixeddd {position:fixed!important;width:100%;}
 
 .list h1 a {color:inherit;}
+
+.menu-column {column-count:3;-moz-column-count:3;-webkit-column-count:3;width:90%;max-width:1000px;}
+.menu-column a {display:block;}
+.menu-column a img {position:relative;height:18px;width:auto;margin-right:3px;}
+
+@media (max-width:999px) {
+	.menu2 a {margin-top:25px;margin-bottom:30px;}
+	.menu2 h4 {margin-top:50px;}
+	.bottom1 {margin-top:20px;}
+	.menu-column {column-count:1;-moz-column-count:1;-webkit-column-count:1;}
+}
+
+@media (max-width:685px) {
+	.menu2 {font-size:92%;}
+	.menu2 a {margin-top:15px;margin-bottom:20px;}
+	.menu2 h4 {margin-top:40px;}
+	.bottom1 {margin-top:10px;}
+	.menu-column a img {height:12px;margin-right:1px;}
+}
