--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -611,7 +611,7 @@ code {
 .contenido blockquote.quote p {color:#3f3f3f; text-align: left!important; font-size: 90%; font-style: normal;}
 
 /*** WHAT THE FACT ***/
-.tag_cloud{-moz-column-count:3;-webkit-column-count:3;column-count:3;width:100%!important;}
+.tag_cloud{-moz-column-count:3;-webkit-column-count:3;column-count:3;width:100%!important;float:left;}
 .tag_cloud code {opacity:1;margin-top:5px;}
 .tamano_fuente{font-size:100%!important;margin:0px 3px}
 
