--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -485,10 +485,10 @@ code {
 
 .contenido h1 {
 	margin:10px 0px;
-	font-size:400%;
+	font-size:250%;
 	width:100%;
 	max-width:100%;
-	line-height: 80px;
+	line-height: 50px;
 }
 .contenido strong,
 .contenido em{display: inline;}
@@ -611,10 +611,8 @@ code {
 .contenido blockquote.quote p {color:#3f3f3f; text-align: left!important; font-size: 90%; font-style: normal;}
 
 /*** WHAT THE FACT ***/
-
 .tag_cloud{-moz-column-count:3;-webkit-column-count:3;column-count:3;width:100%!important;}
-.tag_cloud code {opacity:1;margin-top:5px; float: left;}
-
+.tag_cloud code {opacity:1;margin-top:5px;}
 .tamano_fuente{font-size:100%!important;margin:0px 3px}
 
 .divider{width: 100%; clear: both; display: block; margin: 1rem auto 2.5rem auto; border: 1px solid #adadad;}
@@ -794,13 +792,13 @@ p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 }
 
 .who span:last-of-type {
-	font-family: 'Roboto Light', sans-serif;
-    font-weight: 400;
-    color: #888;
-    font-size: 110%;
-    line-height: 2.8rem;
-    margin-bottom: 3px;
-    text-align: left;
+	font-family:'Roboto Condensed', sans-serif;
+	font-weight:400;
+	color:#888;
+	font-size: 84%;
+    line-height: 2.2rem;
+	margin-bottom:3px;
+	text-align: left;
 }
 
 .postura div {
