--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1442,7 +1442,7 @@ ol li a {
 	font-size:150%;
 	text-align:center;
 	vertical-align:top;
-	height:100%;
+	/*height:100%;*/
 	display:none;
 	border-top:2px solid #757575;
 	overflow-y:scroll;
