--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -386,7 +386,7 @@ code {
 .side-link span {
 	margin-left:80px;
 	font-size:0.8em;
-	padding:5px 0px;
+	padding:0px;
 }
 
 .post {
@@ -396,7 +396,7 @@ code {
 }
 
 .post span {
-	margin-top:5px;
+	margin-top:0px;
 }
 .post.mini span {
 	font-size: 2rem;
@@ -476,12 +476,14 @@ code {
 	margin-left:-5px;
 	text-align:right;
 	padding-top:45px;
+	/*height: 100%!important;*/
 }
 
 .filler {
 	position:absolute;
 	top:0px;
 	background:#EEEEEE;
+	height:100%!important;
 }
 
 .contenido h1 {
@@ -491,6 +493,7 @@ code {
 	max-width:100%;
 	line-height: 50px;
 }
+.contenido h3{width:93.5%;}
 .contenido strong,
 .contenido em{display: inline;}
 
@@ -1955,8 +1958,8 @@ header {
 }
 
 
-.archivo { text-align:center!important; margin-bottom:20px;}
-.archivo.half {width:65%; text-align:center!important; margin-bottom:20px; padding-top:0;}
+.archivo { text-align:center!important; margin-bottom:0px;}
+.archivo.half {width:65%; text-align:center!important; margin-bottom:0px; padding-top:0;}
 .archivo.news h1{text-align:left;font-size:3rem;}
 .archivo.news .post>span{font-size:2.6rem;text-align:left;}
 .archivo.news .post>.excerpt{font-size:1.4rem;text-align:left; width: auto;}
@@ -1973,12 +1976,12 @@ nav.archii {padding:5px 40px 0px; margin-top:20px;}
 .rightside {right:0px; -webkit-transform:rotateY(180deg);}
 .archii a:not(.arrow) {margin:0px 4px;}
 .post-list {margin-top:25px;}
+.post-list a.post.columna{text-align: left;line-height: 30px}
 
 @media (min-width:685px) {
 	.columna {width:93.5%; height:170px;}
 	.columna div {position:absolute; left:0px; top:0px; width:300px; height:170px; background:#DCDCDC; overflow:hidden;}
-	.columna span,
-	.columna .excerpt {margin-left:310px;}
+	.columna span, .columna .excerpt {margin-left:330px;}
 }
 
 @media (max-width:684px) {
@@ -2156,3 +2159,6 @@ p strong {color: #606060;}
 }
 .mejs-inner{position:static!important;}
 .mejs-overlay-button{display:none}
+
+.fecha{font-size: 55%!important;color:#888;line-height: 5px!important;}
+.fecha2{color:#888;line-height: 5px!important;}
