--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -476,7 +476,7 @@ code {
 	margin-left:-5px;
 	text-align:right;
 	padding-top:45px;
-	/*height: 100%!important;*/
+	height: 100%!important;
 }
 
 .filler {
