--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -1832,6 +1832,7 @@ p img {max-width: 100%; height: auto;}
 
 #articles {
 	padding-bottom:60px;
+	background-color: #3f3f3f;
 }
 
 #sidebar-left {
