--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -2166,3 +2166,5 @@ p strong {color: #606060;}
 
 ul.page-numbers {width:100%;}
 ul.page-numbers li {list-style:none;display:inline-block;margin:0px 4px;}
+
+img.size-full{width:100%!important;height:auto!important;max-width: 577px}
