--- a/themes/plumasatomicas16/style.css
+++ b/themes/plumasatomicas16/style.css
@@ -62,6 +62,7 @@ div.jqcloud{overflow:hidden;position:relative}div.jqcloud span{padding:0}div.jqc
 .clearfix { zoom:1; }
 
 
+
 /*** FONT FACE ***/
 @font-face {
     font-family:'TradeGothic20';
@@ -381,7 +382,8 @@ code {
 	top:0px;
 	width:72px;
 	height:72px;
-	background:#DCDCDC;
+	background:url('images/bg.jpg') no-repeat center;
+	background-size: auto 100%;
 }
 
 .side-link span {
@@ -435,14 +437,16 @@ code {
 .topp div {
 	width:100%;
 	height:350px;
-	background:#DCDCDC;
+	background:url('images/bg.jpg') no-repeat center;
+	background-size: 100%;
 	overflow:hidden;
 }
 
 .mini div {
 	width:100%;
 	height:170px;
-	background:#DCDCDC;
+	background:url('images/bg.jpg') no-repeat center;
+	background-size: 100%;
 	overflow:hidden;
 }
 
@@ -517,6 +521,8 @@ code {
     left:-9999px;
     right:-9999px;
     margin:auto;
+    background: url('images/bg.jpg') center no-repeat;
+    background-size:100%;
 }
 
 .imagen-post span {
@@ -782,7 +788,8 @@ p.excerpt {font-size: 14px;text-align: left;color: #bfbfbf;line-height: 20px;}
 	width:128px;
 	height:128px;
 	border-radius:50%;
-	background:#DCDCDC;
+	background:url('images/bg.jpg') no-repeat center;
+	background-size:auto 100%;
 	overflow:hidden;
 }
 .who img {
@@ -1968,7 +1975,8 @@ header {
 .archivo.news .post>.excerpt{font-size:1.4rem;text-align:left; width: auto;}
 
 .who-archive {position:relative; width:33%; min-width:260px; vertical-align:top; text-align:center; margin:30px 0px 20px;}
-.who-archive div {width:128px; height:128px; border-radius:50%; background:#DCDCDC; overflow:hidden;}
+.who-archive div {width:128px; height:128px; border-radius:50%; background:url('images/bg.jpg') no-repeat center;
+	background-size:auto 100%; overflow:hidden;}
 .who-archive span {width:100%; line-height: 150%;}
 .who-archive span:nth-of-type(1) {font-size:125%; margin:19px 0px 9px;}
 .who-archive span:nth-of-type(2) {font-family:'Roboto Condensed', sans-serif; font-weight:400; color:#888; font-size:90%; margin-bottom:3px;}
@@ -1983,7 +1991,8 @@ nav.archii {padding:5px 40px 0px; margin-top:20px;}
 
 @media (min-width:685px) {
 	.columna {width:93.5%; height:170px;}
-	.columna div {position:absolute; left:0px; top:0px; width:300px; height:170px; background:#DCDCDC; overflow:hidden;}
+	.columna div {position:absolute; left:0px; top:0px; width:300px; height:170px; 	background:url('images/bg.jpg') no-repeat center;
+	background-size:100%; overflow:hidden;}
 	.columna span, .columna .excerpt {margin-left:330px;}
 }
 
